Replace SdmxWebSource#endpoint with SdmxWebSource#uri